Updates from ShareLaTeX

--- a/main/references.bib
+++ b/main/references.bib
@@ -63,7 +63,15 @@
     language  = "english"
 }
 
-
+@article{Folland,
+    author    = "Folland, G B and Sitaram, A",
+    title     = "{The Uncertainty Principle: A Mathematical Survey}",
+    journal   = "The Journal of Fourier Analysis and Applications",
+    year      = "1997",
+    volume    = "3",
+    issue     = "3",
+    language  = "english"
+}  
 
 
 @book{Gradshteyn-Ryzhik,
